[package]
name = "voice-native"
version = "0.0.3"
edition = "2021"
authors = ["Rove HQ"]
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native-tool-entry = []

[dependencies]
sdk = { path = "../../../core/sdk" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
